# a-shares-mcp-server

./: .gitignore  README.md  mcp_config.json.sample  pyproject.toml
.cursor/rules/: fast-mcp.mdc
app/: mcp_server.py
app/resources/: large_fund_flow_resources.py  static_resource.py
app/test/: test_tools.py
app/tools/: large_fund_flow_analysis_tool.py
app/utils/: stock_code_util.py
